# pick-place-challenge

./: .gitignore  .pre-commit-config.yaml  NOTICE.md  README.md  pyproject.toml
.typings/mujoco/: __init__.pyi
.zed/: settings.json
docs/: Robot arm learns how to make a bankshot.pptx
scripts/: random_rollout.py  showcase.py  spike_warp.py  view_scene.py
src/pick_place_challenge/: __init__.py  assets.py  cli.py  her_goal_env.py  mdp.py  objects.py  polyhaven.py  ppo_release_rollout_env.py  room.py  runner.py  scene.py  task.py  world.py
src/pick_place_challenge/robots/: franka_robotiq.py
src/pick_place_challenge/tasks/: __init__.py  pick_place_env_cfg.py
tests/: test_her_reward.py  test_scene_smoke.py
