[project]
name = "pick-place-challenge"
version = "0.1.0"
description = "Open-ended Franka + Robotiq pick-and-place sandbox on mjlab (Index Robotics)."
readme = "README.md"
authors = [
    { name = "Ben Eisner", email = "ben@indexrobots.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "mjlab>=1.4.0",
    "robot-descriptions>=2.0.0",
]

[project.scripts]
# These shadow mjlab's identically-named entry points so our tasks are
# registered before the CLI runs. Same flags as mjlab's play/train.
play = "pick_place_challenge.cli:play"
train = "pick_place_challenge.cli:train"
pick-place-envs = "pick_place_challenge.cli:list_envs"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
