[project]
name = "pick-place-challenge"
version = "0.1.0"
description = "Open-ended Franka + Robotiq pick-and-place sandbox on mjlab (Index Robotics)."
readme = "README.md"
authors = [
    { name = "Ben Eisner", email = "ben@indexrobots.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "mjlab>=1.4.0",
    "mujoco>=3.8.1",
    "mujoco-warp>=3.8.1",
    "numpy>=2.4.6",
    "objaverse>=0.1.7",
    "pillow>=12.2.0",
    "robot-descriptions>=2.0.0",
    "torch>=2.12.0",
    "trimesh>=4.12.2",
    "tyro>=1.0.13",
    "warp-lang>=1.14.0",
]

[project.scripts]
# These shadow mjlab's identically-named entry points so our tasks are
# registered before the CLI runs. Same flags as mjlab's play/train.
play = "pick_place_challenge.cli:play"
train = "pick_place_challenge.cli:train"
pick-place-envs = "pick_place_challenge.cli:list_envs"
pick-place-fetch-assets = "pick_place_challenge.scene:fetch_all_assets"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.deptry]
known_first_party = ["pick_place_challenge"]
