[project]
name = "pick-place-challenge"
version = "0.1.0"
description = "Open-ended Franka + Robotiq pick-and-place sandbox on mjlab (Index Robotics)."
readme = "README.md"
authors = [
    { name = "Ben Eisner", email = "ben@indexrobots.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "mjlab>=1.4.0",
    "mujoco>=3.8.1",
    "numpy>=2.4.6",
    "objaverse>=0.1.7",
    "pillow>=12.2.0",
    "robot-descriptions>=2.0.0",
    "torch>=2.12.0",
    "trimesh>=4.12.2",
    "tyro>=1.0.13",
]

[project.scripts]
# These shadow mjlab's identically-named entry points so our tasks are
# registered before the CLI runs. Same flags as mjlab's play/train.
play = "pick_place_challenge.cli:play"
train = "pick_place_challenge.cli:train"
pick-place-envs = "pick_place_challenge.cli:list_envs"
pick-place-fetch-assets = "pick_place_challenge.scene:fetch_all_assets"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "prek>=0.4.4",
    "pybind11-stubgen>=2.5.5",
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.44",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = [".typings"]  # generated mujoco stubs

[tool.deptry]
known_first_party = ["pick_place_challenge"]

[tool.ty.environment]
# mujoco is a pybind11 extension with no shipped stubs; generate them with
#   uv run pybind11-stubgen --ignore-all-errors mujoco -o .typings
extra-paths = [".typings"]

[tool.ty.src]
include = ["src", "scripts", "tests"]
exclude = [".typings"]

# scene.py is all MuJoCo/trimesh glue; their pybind/3rd-party stubs mistype
# array-like property setters and load() unions, so silence those false
# positives here (real type checking stays on everywhere else).
[[tool.ty.overrides]]
include = ["src/pick_place_challenge/scene.py"]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
call-non-callable = "ignore"
no-matching-overload = "ignore"
unresolved-attribute = "ignore"

# mjlab types step() obs values as Tensor, but our camera group is a dict; and
# mujoco.viewer is a submodule the generated stubs don't cover.
[[tool.ty.overrides]]
include = ["scripts/**", "tests/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unresolved-import = "ignore"
unresolved-attribute = "ignore"
